<resources>
    <string name="app_name">Bayt Almuqadas</string>
    <string name="nomor_surat">1</string>
    <string name="nama">Al Fatihah</string>
    <string name="type">Mekah</string>
    <string name="jumlah_ayat">7</string>
    <string name="label_aya">Aya</string>
    <string name="asma">Al Fateeha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nomor_ayat">1</string>
    <string name="ar">bism allah alrahman alrahim</string>
    <string name="fajr">Fajr :</string>
    <string name="dhuhr">Dhuhr :</string>
    <string name="asr">Asr :</string>
    <string name="maghrib">Maghrib :</string>
    <string name="isha">Isha :</string>
    <string name="prayer_timings">Prayer Timings</string>
    <string name="tasbih">Tasbih</string>
    <string name="prayer_timings_menu">Prayer Timings</string>
    <string name="home">Home</string>
    <string name="date_for">Date For :</string>
    <string name="titl_tasbih">Tasbih</string>
    <string name="click">Click</string>
    <string name="reseat">Reseat</string>
    <string name="duas">Duas</string>
    <string name="al_quran_al_karim">Al Quran Al Karim</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="quran_splash">QURAN</string>
    <string name="bayt_almuqads_splash">BAYT ALMUQADS</string>
    <string name="adkar_al_muslim">Adkar Al Muslim</string>
    <string name="choose_tasbeeh">Choose tasbeeh:</string>
    <string name="kaaba_direction">Qiblah direction</string>
    <string-array name="spinner">
        <item>Glory to God</item>
        <item>praise be to God</item>
        <item>There is no deity except Allah</item>
        <item>Allah is the greatest</item>
        <item>ask Allah for forgiveness</item>
        <item>There is no power or strength save in Allah</item>
        <item>God blessings and peace upon our Prophet Muhammad </item>
        <item>Glory be to God and praise be to God the Great</item>
    </string-array>
</resources>