<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardview_surat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="16dp"
    android:padding="16dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nomor_surat"
        android:text="@string/nomor_surat"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/ic_bg_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/nama"
        android:text="@string/nama"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toEndOf="@id/nomor_surat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/type"
        android:text="@string/type"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/nomor_surat"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/pemisah"
        android:text="@string/pemisah"
        android:textSize="14sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/type"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/jumlah_ayat"
        android:text="@string/jumlah_ayat"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/pemisah"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:paddingStart="0dp"
        android:paddingEnd="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/label_ayat"
        android:text="@string/label_aya"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/jumlah_ayat"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/asma"
        android:text="@string/asma"
        android:textSize="32sp"
        android:fontFamily="@font/alfont_com_pdms_saleem_quranfont"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/nama"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>